# easyclaw

./: .env.sample  .gitignore  deploy-localnet-btc-lp.sh  prd.md  run-localnet-node.sh  screens.md  upgrade-programs.sh
easyclaw-contract/: .env.example  .gitignore  Anchor.toml  Cargo.toml  package.json  tsconfig.json
easyclaw-contract/programs/lp_vault/: Cargo.toml
easyclaw-contract/programs/lp_vault/src/: constants.rs  error.rs  helpers.rs  lib.rs
easyclaw-contract/programs/lp_vault/src/instructions/: apply_liquidation.rs  apply_trade_fill.rs  claim_keeper_rebate.rs  claim_withdraw_lp.rs  configure_pool.rs  create_lp_position.rs  deposit_lp.rs  init_keeper_rebate.rs  initialize_pool.rs  mod.rs  request_withdraw_lp.rs
easyclaw-contract/programs/lp_vault/src/state/: keeper_rebate.rs  lp_position.rs  mod.rs  pool.rs  pool_config_params.rs  withdraw_request.rs
easyclaw-contract/programs/market_registry/: Cargo.toml
easyclaw-contract/programs/market_registry/src/: constants.rs  error.rs  helpers.rs  lib.rs
easyclaw-contract/programs/market_registry/src/instructions/: add_keeper.rs  create_market.rs  initialize_global.rs  mod.rs  remove_keeper.rs  set_global_pause.rs  set_market_status.rs  update_market_params.rs
easyclaw-contract/programs/market_registry/src/state/: global_config.rs  keeper_set.rs  market.rs  mod.rs  types.rs
easyclaw-contract/programs/order_engine/: Cargo.toml
easyclaw-contract/programs/order_engine/src/: constants.rs  error.rs  lib.rs
easyclaw-contract/programs/order_engine/src/helpers/: access.rs  execution.rs  funding.rs  math.rs  mod.rs  oracle.rs  position.rs  reservation.rs
easyclaw-contract/programs/order_engine/src/instructions/: cancel_order.rs  cancel_order_by_executor.rs  create_margin_account.rs  create_user_market_position.rs  deposit_collateral.rs  execute_order.rs  initialize_engine.rs  initialize_market_funding_state.rs  liquidate.rs  mod.rs  place_order.rs  withdraw_collateral.rs
easyclaw-contract/programs/order_engine/src/state/: engine_config.rs  market_funding_state.rs  mod.rs  order.rs  position_leg.rs  user_margin.rs  (+1 more)
easyclaw-contract/programs/usdc_faucet/: Cargo.toml
easyclaw-contract/programs/usdc_faucet/src/: error.rs  lib.rs
easyclaw-contract/scripts/: bootstrap.ts  defaults.ts  deploy_devnet.sh  faucet.ts  fund_lp.ts  qa_workflow.ts
(+83 files in other folders)
