[workspace]
members = [
  "programs/market_registry",
  "programs/lp_vault",
  "programs/order_engine",
  "programs/usdc_faucet",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
