[package]
name = "lp-vault"
version = "0.1.0"
edition = "2021"
description = "Perp DEX LP vault and fee accounting"

[lib]
crate-type = ["cdylib", "lib"]
name = "lp_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
