[package]
name = "market-registry"
version = "0.1.0"
edition = "2021"
description = "Perp DEX market registry program"

[lib]
crate-type = ["cdylib", "lib"]
name = "market_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
